# LocalMinReverseCommunication

./: CMakeLists.txt  README.md
include/: LocalMinReverseCommunication.hpp  local_min_rc.hpp
test/: tests.cpp
